infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo # How it finds the pod to manage
  template:
    metadata:
      labels:
        app: auth-mongo # This label will be applied to the pod
    spec:
      containers:
        - name: auth-mongo
          image: mongo #This image comes from official mongo db
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
spec: 
  selector: 
    app: auth-mongo #This matches to selector matchlabels etc
  ports: 
    - name: db #For logging purposes
      protocol: TCP
      port: 27017
      targetPort: 27017
