infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  selector: 
    matchLabels: 
    # This is the name service searches for to govern
      app: tickets
  template:
    metadata:
      labels:
        app: tickets # This label will be applied to the pod
    spec: 
      containers: 
        - name: tickets
          image: dutt23/ticketing-tickets 
---

apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec: 
  selector: 
    app: tickets
  ports: 
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
